# noo-game

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/common/: Utils.hpp
src/geometry/: GeometryUtils.hpp  TerrainGenerator.hpp
src/logging/: Logger.hpp
src/renderer/: Geometry.hpp  IndexBuffer.hpp  RenderBuffer.hpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Texture2D.hpp  TextureSampler.hpp  VertexBuffer.hpp  VertexTypes.hpp
src/renderer/glad/: glad.c  glad.h
src/renderer/states/: BlendState.hpp  CullState.hpp  DepthState.hpp  RasterizerState.hpp  StateSet.hpp  StencilState.hpp  ViewportState.hpp
src/resources/shaders/: deferred_light.fsh  deferred_light.vsh  deferred_pre.fsh  deferred_pre.vsh  diffuse.fsh  diffuse.vsh  simple.fsh  simple.vsh  textured.fsh  textured.vsh  wire.fsh  wire.gsh
src/scene/: Camera.hpp  Material.hpp  Mesh.hpp  Model.hpp
